GUI Bugfixes and Improvements for ReBalancingViewer  - Rebalancing Restults for Accounts are shown  - Accounts can be excluded from Rebalancing  - Tooltips explain “use for rebalancing”  - Better colors in dark mode

--- a/name.abuchen.portfolio.ui/css/shared/light.css
+++ b/name.abuchen.portfolio.ui/css/shared/light.css
@@ -81,6 +81,7 @@ CustomColors {
 
 	red-foreground: #800000;
 	green-foreground: #008000;
+	gray-foreground: #707070;
 }
 
 SecuritiesChart {
